<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="#000000"
        android:paddingBottom="40dp"
        android:text="Write in your average grade"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Type in your grade..."
        android:id="@+id/add_grades_text"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:paddingTop="40dp"
        android:id="@+id/add_average_grade"
        android:gravity="center"
        android:textSize="17dp"
        android:textColor="#ff407f"
        android:clickable="true"/>

</LinearLayout>