<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#FFFFFF">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="35dp"
        android:id="@+id/r2grade"
        android:gravity="center"
        android:textSize="18dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="#000000"
        android:text="@string/matematikkR2"
        android:paddingBottom="20dp"/>

    <NumberPicker
        android:id="@+id/numberPicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_below="@id/r2grade"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        />


    <TextView
        android:layout_width="match_parent"
        android:id="@+id/confirmr2"
        android:layout_below="@id/numberPicker1"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textSize="17dp"
        android:textColor="#ff407f"
        android:gravity="center"
        android:paddingTop="10dp"
        android:clickable="true"
        android:paddingBottom="30dp"/>




</RelativeLayout>